--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -346,7 +346,7 @@ hr {
 .btn {
     background: #27aae1;
     -moz-user-select: none;
-    text-transform: capitalize;
+    text-transform: none;
     color: #fff;
     cursor: pointer;
     display: inline-block;
