--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -31,7 +31,10 @@
 }
  
 @media (max-width: 767px) {
-	.ball {
+	.footer-area .footer-tittle h4 {
+        margin-bottom: 20px
+    }
+    .ball {
 		display: none
 	}
   	.quality__col {
