--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -970,10 +970,11 @@ hr {
   margin-top: 35px
 }
 .facility img {
-  margin-bottom: 35px!important
+  margin-bottom: 35px
 }
 .facility.responsive-imgs img {
-  width: 1200PX!important
+  margin-bottom: 35px!important;
+  width: 1200px!important
 }
  /*----------------------------------------*/
 /*  STAFF
